# 42shell

./: .gitmodules  README.md  README_EN.md  README_RU.md  READMEru.md
42InOut4Mode/: Inp_Cmd.txt  Inp_FOV.txt  Inp_Sim.txt  SC_2Whl.txt
42InOutNEW/: Dyn.42  Inp_Cmd.txt  Inp_Sim.txt  Nodes.txt  SC_New.txt
42InOutSimplest/: Inp_Cmd.txt  Inp_Sim.txt  SC_Simple.txt
42add/: PSModel.c  PSModel.h  SPSModel.h  fswAlg.c  fswMode.c  fswMode.h  modelSPS.c  modelSPS.h  orbControl.c  serviceAlg.c  serviceAlg.h  shHeaders.h
42add/plot/: plotDraw.cpp
42change/Include/: 42defines.h  shDefines.h
42change/Source/: 42cmd.c  42dynamics.c  42exec.c  42fsw.c  42glut.c  42gpgpu.c  42init.c  shActuators.c  shExec.c  shFsw.c  shIokit.c  thrModel.c
42dev/: PSModel.c  PSModel.h  SPSModel.c  SPSModel.h  fswAlg.c  fswAlg.h  fswMode.c  fswMode.h  orbControl.c  shHeaders.h
42dev/imPlotGui/: plotDraw.cpp
42dev/qtPlotGui/: mainwindow.cpp
42support/: 42.pro  Build 42 in Qt with 3D.odt  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  object_script.42.Debug  object_script.42.Release  ui_mainwindow.h
42support/QtSource/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
42support/debug/: moc_mainwindow.cpp  moc_qcustomplot.cpp
BIMA/: Dyn.42  Inp_Cmd.txt  Inp_Sim.txt  SC_2Whl.txt
ThrControlTest/: Dyn.42  Inp_Sim.txt  Nodes.txt  ThrSC.txt
cAlgorithms/: ballistic.c  simplestMode.c
examples/: README.md
examples/NadirSunMode/: Inp_Cmd.txt  Inp_Graphics.txt  Inp_Sim.txt  Orb_LEO.txt  SC_Simple.txt  starlink.mtl
examples/Rendezvous/: Inp_Cmd.txt  SC_KA.txt  SC_OO.txt
examples/Simplest/: Inp_Sim.txt
examples/SpsSimple/: SC_sc4.txt
examples/ThrControl8Thr/: Inp_Cmd.txt  Inp_Sim.txt  Nodes.txt  Orb_ThrSC.txt  ThrSC.txt
shInOut/2SC/: Inp_Cmd.txt  Inp_Sim.txt  Nodes_ThrDemo.txt  Orb_KA.txt  SC_KA.txt  SC_OO.txt
shInOut/SpsSimple/: SPS_Simple.txt
shInOut/SpsTemplate/: SC_Simple.txt  SPS_Simple.txt
shInOut/ThrControlTest/: Inp_Cmd.txt  Thrs_Thr.txt
